--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="zh-CN">
 <head>
 <meta charset="UTF-8">
@@ -13,24 +13,31 @@
 
 <div id="taoPlus" class="taoplus">
 
-    <ul class="nav">
-        <li><a href="#"><span class="iconfont">&#x3571;</span></a></li>
-        <li><a href="#"><span class="iconfont">&#x3577;</span></a></li>
-        <li><a href="#"><span class="iconfont">&#x3579;</span></a></li>
-        <li><a href="#"><span class="iconfont">&#x355d;</span></a></li>
-        <li><a href="#"><span class="iconfont">&#x3572;</span></a></li>
-        <li><a href="#"><span class="iconfont">&#x3565;</span></a></li>
-    </ul>
+  <ul class="nav">
+    <li><a href="#"><span class="iconfont">&#x3571;</span></a></li>
+    <li><a href="#"><span class="iconfont">&#x3577;</span></a></li>
+    <li><a href="#"><span class="iconfont">&#x3579;</span></a></li>
+    <li><a href="#"><span class="iconfont">&#x355d;</span></a></li>
+    <li><a href="#"><span class="iconfont">&#x3572;</span></a></li>
+    <li><a href="#"><span class="iconfont">&#x3565;</span></a></li>
+  </ul>
 
-    <div class="home">
-        <a href="#"><span class="iconfont">&#x355c;</span></a>
-    </div>
+  <div class="home">
+    <a href="#"><span class="iconfont">&#x355c;</span></a>
+  </div>
 
 </div>
 
 <div id="overlay" class="overlay"></div>
 
-<script src="js/jquery-1.11.0.min.js"></script>
+
+<!-- Fork me on Github -->
+<a href="https://github.com/mittya/css3-taobao-taoplus">
+  <img class="fork" src="imgs/ribbons.png" alt="Fork me on GitHub">
+</a>
+
+<script src="js/jquery-2.1.0.min.js"></script>
 <script src="js/demo.js"></script>
+
 </body>
 </html>
