--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html lang="zh-CN">
 <head>
-<meta charset="UTF-8">
-<title>Tao +</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="css/demo.css">
+  <meta charset="UTF-8">
+  <title>Tao +</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="lib/css/taoplus.css">
 </head>
 
 <body>
@@ -33,11 +33,11 @@
 
 <!-- Fork me on Github -->
 <a href="https://github.com/mittya/css3-taobao-taoplus">
-  <img class="fork" src="imgs/ribbons.png" alt="Fork me on GitHub">
+  <img class="fork" src="res/ribbons.png" alt="Fork me on GitHub">
 </a>
 
-<script src="js/jquery-2.1.0.min.js"></script>
-<script src="js/demo.js"></script>
+<script src="lib/js/jquery-2.1.0.min.js"></script>
+<script src="lib/js/taoplus.js"></script>
 
 </body>
 </html>
