--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Tao +</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="lib/css/taoplus.css">
+  <link rel="stylesheet" href="dist/css/taoplus.css">
 </head>
 
 <body>
@@ -36,7 +36,7 @@
   <img class="fork" src="res/ribbons.png" alt="Fork me on GitHub">
 </a>
 
-<script src="lib/js/taoplus.js"></script>
+<script src="dist/js/taoplus.js"></script>
 
 </body>
 </html>
